benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignum_ModExp_DivMod_ModExpPow2_Mul_iter5_error.log
=== Verification Error - Iteration 5 ===
File: benchmarks/verus/bignum/files/bignum_ModExp_DivMod_ModExpPow2_Mul.rs
Time: 2025-09-15 11:11:48

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0599]: no method named `view` found for struct `vstd::seq::Seq` in the current scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_ModExpPow2_Mul_impl.rs:87:29
   |
87 |             bit = result_seq@[j as int];
   |                             ^ method not found in `Seq<char>`

error[E0605]: non-primitive cast: `vstd::prelude::nat` as `usize`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_ModExpPow2_Mul_impl.rs:78:56
   |
78 |     let mut result_vec: Vec<char> = Vec::with_capacity(result_seq.len() as usize);
   |                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error[E0605]: non-primitive cast: `vstd::prelude::nat` as `usize`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_ModExpPow2_Mul_impl.rs:80:15
   |
80 |     while j < result_seq.len() as usize
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0599, E0605.
For more information about an error, try `rustc --explain E0599`.

--------------------------------------------------------------------------------

Additional Output:
error[E0599]: no method named `view` found for struct `vstd::seq::Seq` in the current scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_ModExpPow2_Mul_impl.rs:87:29
   |
87 |             bit = result_seq@[j as int];
   |                             ^ method not found in `Seq<char>`

error[E0605]: non-primitive cast: `vstd::prelude::nat` as `usize`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_ModExpPow2_Mul_impl.rs:78:56
   |
78 |     let mut result_vec: Vec<char> = Vec::with_capacity(result_seq.len() as usize);
   |                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error[E0605]: non-primitive cast: `vstd::prelude::nat` as `usize`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_ModExpPow2_Mul_impl.rs:80:15
   |
80 |     while j < result_seq.len() as usize
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0599, E0605.
For more information about an error, try `rustc --explain E0599`.
